cambio de valor

--- a/pruebaJupyter.ipynb
+++ b/pruebaJupyter.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "cf45bf2b",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
     "\n",
     "pf = pd.read_csv('./penguins.csv')\n",
     "\n",
-    "##Seleccionamo las columnas y sus avlores \n",
+    "##Seleccionamo las columnas y sus valores \n",
     "\n",
     "Datos = pd.crosstab(df['species'], df['sex'])\n"
    ]
